# PLVINS_ROS2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker_entrypoint.sh  eval_euroc.sh
docs/: docker.md  example.md  linefeature_change.md
src/benchmark_publisher/: CMakeLists.txt  package.xml
src/benchmark_publisher/launch/: publish.launch.py
src/benchmark_publisher/src/: benchmark_publisher_node.cpp
src/camera_model/: CMakeLists.txt  package.xml
src/config/: vins_rviz_config.rviz
src/config/euroc/: euroc_config_fix_extrinsic.yaml  loop.yaml
src/config/simdata/: ex_calib_simdata.yaml
src/feature_tracker/: CMakeLists.txt  package.xml
src/feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  linefeature_tracker.cpp  linefeature_tracker_node.cpp  parameters.cpp  parameters.h
src/image_node_b/: CMakeLists.txt  package.xml
src/image_node_b/src/: image_node_b.cpp
src/plvins_interfaces/: CMakeLists.txt  package.xml
src/plvins_interfaces/msg/: PlvinsCloud.msg
src/pose_graph/: CMakeLists.txt  package.xml
src/pose_graph/src/: keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
src/pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
src/sim_data_pub/: CMakeLists.txt  package.xml
src/sim_data_pub/scripts/: euroc_publisher.py
src/sim_data_pub/src/: pub_feature.cpp  pub_imu.cpp
src/vins_estimator/: CMakeLists.txt  package.xml
src/vins_estimator/include/: estimator.h  feature_manager.h  parameters.h
src/vins_estimator/launch/: euroc_fix_extrinsic.launch.py  plvins.launch.py
src/vins_estimator/src/: estimator.cpp  estimator_node.cpp  feature_manager.cpp  parameters.cpp  parameters.h
src/vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h
src/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp
src/vins_estimator/src/loop-closure/: demoDetector.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  loop_closure.h
src/vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
