<?xml version="1.0"?>
<package format="3">
  <name>benchmark_publisher</name>
  <version>0.0.0</version>
  <description>Benchmark publisher (ROS2 Humble)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>eigen</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
