<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_model</name>
  <version>0.0.0</version>
  <description>The camera_model package (ROS2 Humble)</description>

  <maintainer email="qintonguav@gmail.com">dvorak</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Boost</depend>
  <depend>OpenCV</depend>
  <depend>libceres-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
