<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>feature_tracker</name>
  <version>0.0.0</version>
  <description>The feature_tracker package (ROS2 Humble)</description>
  <maintainer email="qintonguav@gmail.com">dvorak</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_model</depend>
  <depend>message_filters</depend>
  <depend>plvins_interfaces</depend>
  <depend>OpenCV</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
