<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_graph</name>
  <version>0.0.0</version>
  <description>pose_graph package (ROS2 Humble)</description>
  <maintainer email="tony-ws@todo.todo">tony-ws</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_model</depend>
  <depend>plvins_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>OpenCV</depend>
  <depend>libceres-dev</depend>
  <depend>eigen</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
