<?xml version="1.0"?>
<package format="3">
  <name>sim_data_pub</name>
  <version>0.0.0</version>
  <description>Simulation data publishers (ROS2 Humble)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>eigen</depend>
  <export><build_type>ament_cmake</build_type></export>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
