<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plvins_estimator</name>
  <version>0.0.0</version>
  <description>The plvins_estimator package (ROS2 Humble)</description>
  <maintainer email="heyijia2016@gmail.com">qintong</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>cv_bridge</depend>
  <depend>camera_model</depend>
  <depend>plvins_interfaces</depend>
  <depend>OpenCV</depend>
  <depend>libceres-dev</depend>
  <depend>eigen</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
